<resources>
    <string name="app_name">PlanningPokerFB</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="login">Login</string>
    <string name="userEmail">E-mail</string>
    <string name="pwd">Password</string>
    <string name="login_btn">Login</string>
    <string name="vote">Please vote!</string>
    <string name="task">Tasks</string>
    <string name="score">Scores</string>
    <string name="vote_btn">Submit</string>
    <string name="result">Results</string>
    <string name="tv_reg">Sign Up</string>
    <string name="btn_sign">Sign Up</string>
    <string name="tv_admin">Groups</string>
    <string name="tv_user">Groups</string>
    <string name="tv_group_name">Add a group name</string>
    <string name="tv_add_task">Add a new task</string>
    <string name="tv_add_group">Add a new group</string>
    <string name="btn_add_task">Add task</string>
    <string name="btn_add_group">Add group</string>
    <string name="btn_submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
